[gd_scene load_steps=8 format=3 uid="uid://fywen4goslwu"]

[ext_resource type="Script" uid="uid://bbvcvgk8n4onq" path="res://scripts/monkey_select.gd" id="1_6xyja"]
[ext_resource type="FontFile" uid="uid://djts2giqhklm6" path="res://assets/fonts/handjet/Handjet-Regular.ttf" id="1_stxvw"]
[ext_resource type="FontFile" uid="uid://fviplagdc8bw" path="res://assets/fonts/handjet/Handjet-Light.ttf" id="2_56yov"]
[ext_resource type="Texture2D" uid="uid://bqsj8l8dp0rxl" path="res://assets/ui/CheckboxChecked.png" id="3_rkcrd"]
[ext_resource type="FontFile" uid="uid://d3wp21mib3e8s" path="res://assets/fonts/handjet/Handjet-ExtraBold.ttf" id="3_u03e6"]
[ext_resource type="Texture2D" uid="uid://cvuoamer6kwrk" path="res://assets/ui/CheckboxUnchecked.png" id="5_21n78"]

[sub_resource type="Theme" id="Theme_jhubc"]

[node name="MonkeySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xyja")
checkbox_textures = Array[Resource]([ExtResource("5_21n78"), ExtResource("3_rkcrd")])

[node name="PlayerJoin" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1" type="RichTextLabel" parent="PlayerJoin"]
texture_filter = 5
layout_mode = 2
offset_top = 447.0
offset_right = 270.0
offset_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "PRESS START"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2" type="RichTextLabel" parent="PlayerJoin"]
texture_filter = 5
layout_mode = 2
offset_left = 270.0
offset_top = 447.0
offset_right = 540.0
offset_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "PRESS START"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="P3" type="RichTextLabel" parent="PlayerJoin"]
texture_filter = 5
layout_mode = 2
offset_left = 540.0
offset_top = 447.0
offset_right = 810.0
offset_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "PRESS START"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="P4" type="RichTextLabel" parent="PlayerJoin"]
texture_filter = 5
layout_mode = 2
offset_left = 810.0
offset_top = 447.0
offset_right = 1080.0
offset_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "PRESS START"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonkeySprite" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PM1" type="Control" parent="MonkeySprite"]
layout_mode = 2
anchors_preset = 0
offset_top = 476.0
offset_right = 270.0
offset_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PM2" type="Control" parent="MonkeySprite"]
layout_mode = 2
anchors_preset = 0
offset_left = 270.0
offset_top = 476.0
offset_right = 540.0
offset_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PM3" type="Control" parent="MonkeySprite"]
layout_mode = 2
anchors_preset = 0
offset_left = 540.0
offset_top = 476.0
offset_right = 810.0
offset_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PM4" type="Control" parent="MonkeySprite"]
layout_mode = 2
anchors_preset = 0
offset_left = 810.0
offset_top = 476.0
offset_right = 1080.0
offset_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PlayerReady" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PR1" type="RichTextLabel" parent="PlayerReady"]
texture_filter = 5
layout_mode = 2
offset_left = -15.0
offset_top = 512.0
offset_right = 255.0
offset_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "READY"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PC" type="TextureRect" parent="PlayerReady/PR1"]
texture_filter = 3
layout_mode = 0
offset_left = 187.0
offset_top = 9.0
offset_right = 227.0
offset_bottom = 49.0
texture = ExtResource("5_21n78")

[node name="PCR" type="TextureRect" parent="PlayerReady/PR1/PC"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_rkcrd")

[node name="PR2" type="RichTextLabel" parent="PlayerReady"]
texture_filter = 5
layout_mode = 2
offset_left = 253.0
offset_top = 512.0
offset_right = 523.0
offset_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "READY"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PC" type="TextureRect" parent="PlayerReady/PR2"]
texture_filter = 3
layout_mode = 0
offset_left = 188.0
offset_top = 9.0
offset_right = 228.0
offset_bottom = 49.0
texture = ExtResource("5_21n78")

[node name="PCR" type="TextureRect" parent="PlayerReady/PR2/PC"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.99997
offset_top = 6.0
offset_right = 5.99997
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_rkcrd")

[node name="PR3" type="RichTextLabel" parent="PlayerReady"]
texture_filter = 5
layout_mode = 2
offset_left = 524.0
offset_top = 512.0
offset_right = 794.0
offset_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "READY"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PC" type="TextureRect" parent="PlayerReady/PR3"]
texture_filter = 3
layout_mode = 0
offset_left = 190.0
offset_top = 9.0
offset_right = 230.0
offset_bottom = 49.0
texture = ExtResource("5_21n78")

[node name="PCR" type="TextureRect" parent="PlayerReady/PR3/PC"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.99994
offset_top = 6.0
offset_right = 5.99994
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_rkcrd")

[node name="PR4" type="RichTextLabel" parent="PlayerReady"]
texture_filter = 5
layout_mode = 2
offset_left = 797.0
offset_top = 512.0
offset_right = 1067.0
offset_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_jhubc")
theme_override_fonts/normal_font = ExtResource("1_stxvw")
theme_override_fonts/mono_font = ExtResource("2_56yov")
theme_override_fonts/bold_font = ExtResource("3_u03e6")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 122
bbcode_enabled = true
text = "READY"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PC" type="TextureRect" parent="PlayerReady/PR4"]
texture_filter = 3
layout_mode = 0
offset_left = 187.0
offset_top = 9.0
offset_right = 227.0
offset_bottom = 49.0
texture = ExtResource("5_21n78")

[node name="PCR" type="TextureRect" parent="PlayerReady/PR4/PC"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.99991
offset_top = 6.0
offset_right = 5.99991
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_rkcrd")
